Changed background images and colours

--- a/index.html
+++ b/index.html
@@ -13,22 +13,22 @@
     <div class="container">
     <header>
     <h3>
-        .LEARN.
+       🇬🇧.LEARN.🇬🇧
     </h3>
     <h1>
- The English Explorers
+ English Explorers
     </h1>
     <h2>
-      Adventure, fun, and English in the hills!
+     🌲 Adventure, fun, and English in the hills!🌲
     </h2>
     <a href="#more">
-        Learn more
+        Contact Me
     </a>
     </header>
     <main>
     <section class="grid grid-2-columns">
   <div>
-    <img src="https://www.penedesturisme.cat/sites/default/files/styles/node_image/public/municipi/imatge/albinyana1.jpg?h=943238f6&itok=xUhnnvFE" alt="Picture of Albinyana in the mountains"  class="img-responsive"/>
+    <img src="/images/kids-walking-outside.jpg" alt="Picture of Albinyana in the mountains"  class="img-responsive " />
   </div>
  <div>
     <a name="more"></a>
